--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@dojot/dojot-module-logger": "0.0.1-alpha.5",
     "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^17.1.1",
     "mqtt": "^3.0.0",
+    "mqtt-connection": "^4.0.0",
     "net": "^1.0.2",
     "uuid": "^3.3.2"
   },
