--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "dojot-client-node-mqtt",
+  "name": "dojot-mqtt-client",
   "version": "1.0.0",
   "description": "",
-  "main": "newclient.js",
+  "main": "main.js",
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@dojot/dojot-module-logger": "0.0.1-alpha.5",
+    "@dojot/healthcheck": "^0.0.1-alpha",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.1",
     "mqtt": "^3.0.0",
     "mqtt-connection": "^4.0.0",
     "net": "^1.0.2",
+    "nvm": "0.0.4",
     "uuid": "^3.3.2"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Francisco Angelo Cabelo",
+  "license": "MIT"
 }
